# onepackage

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
include/: Application.h  ArgParser.h
src/: Application.cpp  ArgParser.cpp  main.cpp
